force-app/main/default/objects/Common_Bill__c/Common_Bill__c.object-meta.xml
<CustomObject>
    <label>Total Bill</label>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Total Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>