force-app/main/default/objects/Common_Bill__c/fields/General_Market_West__c.field-meta.xml
<CustomField>
    <fullName>General_Market_West__c</fullName>
    <label>General Market West</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>