force-app/main/default/objects/Common_Bill__c/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <label>International</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>