force-app/main/default/objects/Common_Bill__c/fields/LG_Sales_PMP__c.field-meta.xml
<CustomField>
    <fullName>LG_Sales_PMP__c</fullName>
    <label>LG Sales PMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>