force-app/main/default/objects/Common_Bill__c/fields/National_Media_Entertainment__c.field-meta.xml
<CustomField>
    <fullName>National_Media_Entertainment__c</fullName>
    <label>National Media &amp; Entertainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>