force-app/main/default/objects/Common_Bill__c/fields/Platform_PMP__c.field-meta.xml
<CustomField>
    <fullName>Platform_PMP__c</fullName>
    <label>Platform PMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>