force-app/main/default/objects/Common_Bill__c/fields/Political__c.field-meta.xml
<CustomField>
    <fullName>Political__c</fullName>
    <label>Political</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>