force-app/main/default/objects/Common_Bill__c/fields/Product_CTV_Video__c.field-meta.xml
<CustomField>
    <fullName>Product_CTV_Video__c</fullName>
    <label>Product CTV Video</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>