force-app/main/default/objects/Common_Bill__c/fields/Product_Display__c.field-meta.xml
<CustomField>
    <fullName>Product_Display__c</fullName>
    <label>Product Display</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>