force-app/main/default/objects/Common_Bill__c/fields/Programmatic_Guaranteed__c.field-meta.xml
<CustomField>
    <fullName>Programmatic_Guaranteed__c</fullName>
    <label>Programmatic Guaranteed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>