force-app/main/default/objects/Common_Bill__c/fields/Programmatic_Others__c.field-meta.xml
<CustomField>
    <fullName>Programmatic_Others__c</fullName>
    <label>Programmatic Others</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>