force-app/main/default/objects/Common_Bill__c/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <label>Reseller</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>