force-app/main/default/objects/Common_Bill__c/fields/Social__c.field-meta.xml
<CustomField>
    <fullName>Social__c</fullName>
    <label>Social</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>