force-app/main/default/objects/Common_Bill__c/fields/Sponsored_Search__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Search__c</fullName>
    <label>Sponsored Search</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>