force-app/main/default/objects/Common_Bill__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>General_Market_East__c + General_Market_West__c + International__c + LG_Sales_PMP__c + National_Media_Entertainment__c + Partner_PMP__c + Platform_PMP__c + Programmatic_Others__c + Reseller__c + Social__c + Corporate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>