force-app/main/default/objects/Common_Bill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LG_Internal_PMP__c</columns>
    <columns>LG_Sales_PMP__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Product_CTV_Native__c</columns>
    <columns>Product_CTV_Video__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>